--- a/src/content/docs/welcome/skale-on-base.mdx
+++ b/src/content/docs/welcome/skale-on-base.mdx
@@ -7,8 +7,25 @@ import { Aside } from "@astrojs/starlight/components";
 
 SKALE is officially live with it's first ever **Expand** deployment on Base Sepolia Testnet! This marks the first time a new sChain has been created in a new environment.
 
-<Aside type="caution">
+<Aside type="note">
 This chain and the network deployment are experimental and the following is subject to change. Do not use this chain for production applications or information you are not comfortable losing.
+</Aside>
+
+## Key Features
+
+The SKALE on Base testnet deployment retains 100% of the features you know and love from SKALE including:
+
+- Zero Gas Fees
+- Instant Finality (Single Slot Finality)
+- Native Bridge (Base Sepolia -> SKALE Base Testnet)
+- 268,435,455 block gas limit
+- 64kb contract deployment size limit
+- Solidity-Native Random Number Generator (VRF)
+- Leaderless consensus + High Performance C++ EVM
+- Native SKALE Oracle
+
+<Aside type="note">
+This testnet chain is 100% permissionless.
 </Aside>
 
 ## Testnet
