SKALE Base Faucet link added

--- a/src/content/docs/welcome/skale-on-base.mdx
+++ b/src/content/docs/welcome/skale-on-base.mdx
@@ -40,7 +40,7 @@ This testnet chain is 100% permissionless.
 | Chain Id | 2140350733 |
 | Chain Id Hex | 0x7F93290D |
 | Portal | Coming Soon |
-| Faucet | Coming Soon |
+| Faucet | https://base-sepolia-faucet.skale.space |
 
 ### Tokens
 
