--- a/src/content/docs/welcome/skale-on-base.mdx
+++ b/src/content/docs/welcome/skale-on-base.mdx
@@ -32,13 +32,13 @@ This testnet chain is 100% permissionless.
 
 | Name | Value | 
 | --- | --- |
-| Name | SKALE Base Sepolia Testnet |
-| RPC Url | https://base-sepolia-testnet.skalenodes.com/v1/basic-defiant-hadar |
-| Explorer | https://base-sepolia-testnet-explorer.skalenodes.com |
-| Native Token | sFUEL |
+| Name | SKALE Base Sepolia |
+| RPC Url | https://base-sepolia-testnet.skalenodes.com/v1/jubilant-horrible-ancha |
+| Explorer | https://base-sepolia-testnet-explorer.skalenodes.com:10001/ |
+| Native Token | Credits |
 | Native Token Decimals | 18 |
-| Chain Id | 2140350733 |
-| Chain Id Hex | 0x7F93290D |
+| Chain Id | 324705682 |
+| Chain Id Hex | 0x135A9D92 |
 | Portal | Coming Soon |
 | Faucet | https://base-sepolia-faucet.skale.space |
 
