Update Explorer Url for Token + Expand Table Name

--- a/src/content/docs/welcome/skale-on-base.mdx
+++ b/src/content/docs/welcome/skale-on-base.mdx
@@ -44,8 +44,8 @@ This testnet chain is 100% permissionless.
 
 ### Tokens
 
-| Name | Symbol | Decimals | Base Sepolia Address | sChain Address |
+| Name | Symbol | Decimals | Base Sepolia Address | SKALE Base Sepolia Address |
 | --- | --- | --- | --- | --- |
-| Axios USD | AxiosUSD | 6 | N/A | [0x61a...fcf](https://base-sepolia-testnet-explorer.skalenodes.com:10011/token/0x61a26022927096f444994dA1e53F0FD9487EAfcf) |
+| Axios USD | AxiosUSD | 6 | N/A | [0x61a...fcf](https://base-sepolia-testnet-explorer.skalenodes.com:10001/token/0x61a26022927096f444994dA1e53F0FD9487EAfcf) |
 
 Join us in [Telegram](https://t.me/+o_7DCw9qcbI2NDYx) and ask for additional tokens.
