--- a/src/content/docs/welcome/skale-on-base.mdx
+++ b/src/content/docs/welcome/skale-on-base.mdx
@@ -46,6 +46,21 @@ This testnet chain is 100% permissionless.
 
 | Name | Symbol | Decimals | Base Sepolia Address | SKALE Base Sepolia Address |
 | --- | --- | --- | --- | --- |
-| Axios USD | AxiosUSD | 6 | N/A | [0x61a...fcf](https://base-sepolia-testnet-explorer.skalenodes.com:10001/token/0x61a26022927096f444994dA1e53F0FD9487EAfcf) |
+| SKALE | SKL | 18 | [0xC20...2cF](https://basescan.org/token/0xC20874EB2D51e4e61bBC07a4E7CA1358F449A2cF) | [0xaf2...57b](https://base-sepolia-testnet-explorer.skalenodes.com/token/0xaf2e0ff5b5f51553fdb34ce7f04a6c3201cee57b) |
+| USDC | USDC.e | 6 | [0x036...F7e](https://basescan.org/token/0x036CbD53842c5426634e7929541eC2318f3dCF7e) | [0x2e0...0bD](https://base-sepolia-testnet-explorer.skalenodes.com/token/0x2e08028E3C4c2356572E096d8EF835cD5C6030bD) |
+| Tether USD | USDT | 6 | [0x0ed...4a8](https://basescan.org/token/0x0eda7df37785f570560dA74ceCFD435AB60D84a8) | [0x3ca...0bf](https://base-sepolia-testnet-explorer.skalenodes.com/token/0x3ca0a49f511c2c89c4dcbbf1731120d8919050bf) |
+| Wrapped BTC | WBTC | 8 | [0xC38...8Bc](https://basescan.org/token/0xC3893AEC98b41c198A11AcD9db17688D858588Bc) | [0x451...e87](https://base-sepolia-testnet-explorer.skalenodes.com/token/0x4512eacd4186b025186e1cf6cc0d89497c530e87) |
+| Wrapped Ether | WETH | 6 | [0x420...006](https://basescan.org/token/0x4200000000000000000000000000000000000006) | [0xf94...fc0](https://base-sepolia-testnet-explorer.skalenodes.com/token/0xf94056bd7f6965db3757e1b145f200b7346b4fc0) |
+| ETH (ERC-20) | ETHC | 6 | Native ETH (Gas) on Base | [0xD2Aaa007...000](https://base-sepolia-testnet-explorer.skalenodes.com/token/0xD2Aaa00700000000000000000000000000000000) |
+
+:::note
+When bridging ETH from Base Sepolia to the SKALE Chain, the ETH is locked as native ETH (msg.value) and is minted as an ERC-20 called ETHC on the SKALE Chain.
+On the frontend you can show it as ETH.
+:::
+
+:::note
+WETH and ETHC are both ERC-20 on the SKALE Chain but are deposited differently. WETH is deposited as WETH on Base.
+:::
+
 
 Join us in [Telegram](https://t.me/+o_7DCw9qcbI2NDYx) and ask for additional tokens.
