Update Faucet, Add Contracts

--- a/src/content/docs/building-applications/pick-a-chain.mdx
+++ b/src/content/docs/building-applications/pick-a-chain.mdx
@@ -3,6 +3,12 @@ title: Pick a SKALE Chain
 description: Understanding the different sChains available to developers
 ---
 
+import { Aside } from "@astrojs/starlight/components";
+
+<Aside type="note">
+The SKALE Base Sepolia testnet is currently in beta and is subject to change. If you are building on testnet, we highly recommend you choose [SKALE Base Sepolia](/welcome/skale-on-base).
+</Aside>
+
 ## What is a SKALE Chain?
 
 A SKALE Chain is a layer 1 EVM compatible blockchain running within the SKALE Network. It leverages the networks pool of validators for shared security, has zero gas fees, single-slot finality, and is incredibly powerful.
