--- a/src/content/docs/welcome/chain-info.mdx
+++ b/src/content/docs/welcome/chain-info.mdx
@@ -7,8 +7,9 @@ import { Aside } from "@astrojs/starlight/components";
 
 ## SKALE Chains
 
-Unsure which chain to pick? Head over to the [pick a chain docs](/building-applications/pick-a-chain) for guidance.
-Interested in your own SKALE Chain? Head over to the [SKALE Discord](https://discord.gg/skale) to contact the team.
+<Aside type="note">
+The SKALE Base Sepolia testnet is currently in beta and is subject to change. If you are building on testnet, we highly recommend you choose [SKALE Base Sepolia](/welcome/skale-on-base).
+</Aside>
 
 <Tabs>
   <TabItem label="Testnet">
@@ -22,7 +23,7 @@ Interested in your own SKALE Chain? Head over to the [SKALE Discord](https://dis
 | Titan | [https://testnet.skalenodes.com/v1/aware-fake-trim-testnet](https://testnet.skalenodes.com/v1/aware-fake-trim-testnet) | 1020352220 | [Explorer](https://aware-fake-trim-testnet.explorer.testnet.skalenodes.com/) | AI |  [Portal](https://testnet.portal.skale.space/chains/titan) |
 
 <Aside type="note">
-- You can access testnet gas and tokens at the [Faucet](/faucet)
+- You can access testnet gas for Calypso, Europa, Nebula, and Titan s and Mainnets at the [Faucet](https://sfuelstation.com). You can access SKALE Base Sepolia testnet gas and tokens at the [Faucet](https://base-sepolia-faucet.skale.space).
 </Aside>
 
 ## Testnet Smart Contracts
