Update base sepolia explorer link

--- a/src/content/docs/welcome/skale-on-base.mdx
+++ b/src/content/docs/welcome/skale-on-base.mdx
@@ -30,7 +30,7 @@ The SKALE on Base testnet deployment retains 100% of the features you know and l
 | --- | --- |
 | Name | SKALE Base Sepolia |
 | RPC Url | https://base-sepolia-testnet.skalenodes.com/v1/jubilant-horrible-ancha |
-| Explorer | https://base-sepolia-testnet-explorer.skalenodes.com:10001/ |
+| Explorer | https://base-sepolia-testnet-explorer.skalenodes.com/ |
 | Native Token | Credits |
 | Native Token Decimals | 18 |
 | Chain Id | 324705682 |
