mintlify docs first review

--- a/concepts/bite-protocol/intro-bite-protocol.mdx
+++ b/concepts/bite-protocol/intro-bite-protocol.mdx
@@ -1,11 +1,13 @@
 ---
-title: "BITE Protocol"
+title: "Intro to BITE"
 description: "Blockchain Interoperability and Trustless Execution protocol on SKALE"
 ---
 
 ## Overview
 
-The BITE (Blockchain Interoperability and Trustless Execution) protocol enables secure cross-chain communication and trustless execution across different blockchain networks. BITE is a key component of SKALE's architecture, enabling seamless interoperability while maintaining security guarantees.
+The BITE (Blockchain Interoperability and Trustless Execution) uses threshold encryption at the consensus layer: transactions are encrypted before entering the mempool and only decrypted after block finalisation, preventing validators or bots from front-running or manipulating them. To encrypt and decrypt data is required to at least ⅔ of the chain nodes to use its key share obtained on the DKG process. 
+
+The protocol enables secure cross-chain communication and trustless execution across different blockchain networks. BITE is a key component of SKALE's architecture, enabling seamless interoperability while maintaining security guarantees.
 
 BITE enables developers to build confidential applications (cApps) that can process sensitive data securely within the blockchain environment. This opens the door for innovative use cases across various industries including artificial intelligence, consumer applications, finance, healthcare, and supply chain management.
 
