--- a/concepts/skale-network/skale-network-101.mdx
+++ b/concepts/skale-network/skale-network-101.mdx
@@ -1,5 +1,5 @@
 ---
-title: "SKALE Network"
+title: "SKALE Network 101"
 description: "Overview of the SKALE Network architecture"
 ---
 
@@ -40,7 +40,7 @@ For more information on SKALE Expand, see [SKALE on Base](/get-started/skale-on-
 
 ## Network Architecture Topics
 
-- [SKALE Manager](/concepts/skale-manager) - Core contracts managing the network
+- [SKALE Manager](/concepts/skale-network/skale-manager) - Core contracts managing the network
 - [Pooled Security Model](/concepts/skale-network/pooled-security-model) - How validators secure multiple chains
 - [Delegated Proof of Stake](/concepts/skale-network/delegated-proof-of-stake) - Consensus mechanism
 - [Containerized Nodes](/concepts/skale-network/containerized-nodes) - Node architecture
@@ -49,6 +49,6 @@ For more information on SKALE Expand, see [SKALE on Base](/get-started/skale-on-
 
 ## Related Topics
 
-- [Consensus](/concepts/consensus)
+- [Consensus](/concepts/skale-chain/consensus)
 - [Staking](/concepts/staking/overview)
 - [Governance](/concepts/governance/skale-dao)
