--- a/developers/skale-bridge/overview.mdx
+++ b/developers/skale-bridge/overview.mdx
@@ -1,5 +1,5 @@
 ---
-title: Introduction to SKALE Bridging
+title: Bridge Overview
 description: Complete guide to seamless asset bridging on SKALE Network - Zero gas fees, instant finality, and enterprise-grade security
 ---
 
