Fix Get Started, Reduce Pages

--- a/get-started/skale.mdx
+++ b/get-started/skale.mdx
@@ -1,13 +1,9 @@
 ---
-title: "Start Here"
-description: "The blockchain for billions of agents. Get oriented and start building on SKALE."
+title: "SKALE"
+description: "The blockchain for billions of agents, with native privacy for agents and humans alike."
 ---
 
-## SKALE
-
-> The blockchain for billions of agents. SKALE is a network of Layer 1 blockchains offering infinite scalability, zero gas fees, privacy-first confidential computing, and one of the fastest EVMs in the world.
-
-Build on SKALE and choose the features that fit your needs — from zero gas fees and instant finality to **privacy-first confidential computing** and siloed compute environments. SKALE enables developers to build applications that can scale to billions of users and agents while protecting sensitive data and maintaining regulatory compliance.
+// TODO
 
 ### **Why SKALE?**
 
