--- a/concepts/bite-protocol/intro-bite-protocol.mdx
+++ b/concepts/bite-protocol/intro-bite-protocol.mdx
@@ -1,56 +1,81 @@
 ---
-title: "Intro to BITE"
-description: "Blockchain Interoperability and Trustless Execution protocol on SKALE"
+title: "Introduction"
+description: "BITE Protocol on SKALE - Proof of Encryption and MEV Resistance"
 ---
 
-## Overview
+## What Is Proof‑of‑Encryption?
 
-The BITE (Blockchain Interoperability and Trustless Execution) uses threshold encryption at the consensus layer: transactions are encrypted before entering the mempool and only decrypted after block finalisation, preventing validators or bots from front-running or manipulating them. To encrypt and decrypt data is required to at least ⅔ of the chain nodes to use its key share obtained on the DKG process. 
+Proof of Encryption (PoE) is a foundational security protocol within the SKALE blockchain that guarantees the confidentiality and integrity of every transaction from initiation to final consensus.
 
-The protocol enables secure cross-chain communication and trustless execution across different blockchain networks. BITE is a key component of SKALE's architecture, enabling seamless interoperability while maintaining security guarantees.
+Unlike traditional blockchain systems—where transaction data is visible or partially exposed during propagation and validation—PoE enforces full end-to-end encryption throughout the entire transaction lifecycle.
 
-BITE enables developers to build confidential applications (cApps) that can process sensitive data securely within the blockchain environment. This opens the door for innovative use cases across various industries including artificial intelligence, consumer applications, finance, healthcare, and supply chain management.
+This ensures that:
 
-## Key Features
+* Transaction details remain cryptographically sealed and inaccessible to validators, network nodes, or adversaries.
+* No party can view transaction contents until after they are irreversibly committed by consensus.
+* Risks such as premature parsing, front-running, manipulation, and data leakage are eliminated.
 
-- **Trustless execution** - Cross-chain operations without trusted intermediaries
-- **Secure communication** - Cryptographic guarantees for cross-chain messages
-- **Interoperability** - Connect SKALE Chains with other blockchain networks
-- **Agent support** - Enables agents to operate across multiple chains
-- **Confidential applications (cApps)** - Build applications that process sensitive data securely
-- **Privacy-preserving computation** - Execute computations on confidential data without exposing it
+PoE uses threshold encryption, where decryption is only possible when the active validator committee collaborates. After inclusion and finality, encrypted transactions can be securely decrypted for execution.
 
-## Architecture
+## How BITE Enables Proof‑of‑Encryption
 
-BITE protocol operates through:
+The BITE Protocol implements Proof of Encryption on the SKALE blockchain. It builds on years of research and production operation of SKALE Consensus, extending the Ethereum Virtual Machine (EVM) and Solidity to handle threshold‑encrypted user transactions and data.
 
-- **Message passing** - Secure message transmission between chains
-- **State verification** - Cryptographic verification of cross-chain state
-- **Execution guarantees** - Trustless execution of cross-chain operations
+The goals of BITE are:
 
-## Use Cases
+* Eliminate all MEV (Maximal Extractable Value) by encrypting transaction data until after block finality.
+* Enable privacy-first capabilities that match or exceed traditional Web2 application functionality.
+* Maintain full compatibility with Ethereum/EVM tooling, wallets, and developer workflows such as Metamask, Foundry, Ethers, Viem, etc.
 
-- **Cross-chain agents** - Agents operating across multiple blockchain networks
-- **Enterprise deployments** - Connecting private SKALE Chains with public blockchains
-- **Multi-chain applications** - Applications spanning multiple blockchain networks
-- **Asset bridging** - Secure asset transfers between chains
-- **Confidential AI** - AI applications that process sensitive data securely
-- **Private finance** - Financial applications with confidential transaction details
-- **Healthcare data** - Healthcare applications that protect patient privacy
-- **Supply chain privacy** - Supply chain tracking with confidential business data
+BITE development is divided into four phases:
 
-## Implementation
+1. Threshold decryption during consensus.
+2. Threshold decryption on smart contract data.
+3. Threshold re-encryption.
+4. Threshold fully homomorphic encryption (THFE) within smart contracts.
 
-BITE protocol is integrated into SKALE's messaging layer and bridge infrastructure, providing a foundation for cross-chain operations.
+Check out the [Phases of BITE](/concepts/bite-protocol/phases) for more information
+
+## Native MEV Resistance
+
+BITE achieves provable MEV resistance by encrypting the destination address and data field of transactions before submission to the blockchain.
+
+How it works:
+
+1. User transaction payload is encrypted via SKALE's threshold encryption algorithm.
+2. Encryption is applied directly on top of the Ethereum transaction format.
+3. Wallets, RPCs, and client software require no modification.
+
+In Ethereum:
+
+* Destination address → identifies the smart contract to be invoked.
+* Data field → contains function selector, price, amount, asset pair, etc.
+
+MEV actors target these fields to extract value. BITE conceals them until after block finality, making front-running impossible.
+
+## Two‑Phase Execution Model
+
+1. Inclusion Phase – Encrypted transactions are verified and finalized onchain.
+2. Execution Phase – After block finality, the validator committee runs threshold decryption and reveals the transaction for EVM execution.
+
+Because inclusion happens before decryption, SKALE achieves commit‑then‑reveal semantics, preventing frontrunning and censorship at the protocol layer.
+
+## Censorship Resistance
+
+With BITE Protocol:
+
+* The transaction to field is encrypted.
+* Similar transactions (same gas/data patterns) cannot be easily correlated or censored.
+* Routine activity becomes opaque to outside observers.
+
+## Consensus And Key Management
+
+* Threshold encryption is built directly into SKALE consensus.
+* Fresh public/private keys are generated each epoch using an onchain Distributed Key Generation (DKG) protocol.
+* A new random committee is selected each epoch for encryption and decryption duties.
+* SKALE combines DKG, threshold BLS signatures, and encrypted mempool‑less execution.
 
 ## Learn More
 
 - [Phases of BITE](/concepts/bite-protocol/phases) - Evolution and phases of BITE Protocol
 - [MEV Deep Dive](/concepts/bite-protocol/mev-deep-dive) - Understanding MEV in the context of BITE
-- [Privacy](/concepts/privacy) - How BITE enables privacy-preserving applications
-
-## Related Topics
-
-- [SKALE Bridge](/developers/skale-bridge/overview)
-- [Messaging Layer](/developers/skale-bridge/messaging-layer/message-proxy)
-- [SKALE Manager](/concepts/skale-manager)
