--- a/concepts/skale-network/delegated-proof-of-stake.mdx
+++ b/concepts/skale-network/delegated-proof-of-stake.mdx
@@ -114,9 +114,7 @@ Delegators should consider:
 
 ## Related Topics
 
-- [Staking Overview](/concepts/staking/overview) - Introduction to staking
-- [Staking Lifecycle](/concepts/staking/staking-lifecycle) - Detailed staking lifecycle
-- [How to Stake](/concepts/staking/getting-started) - Guide to staking
-- [Validators](/concepts/staking/validators) - Validator information
+- [Staking SKL](/get-started/staking/staking-skl) - Introduction to staking
+- [How to Stake SKL](/get-started/staking/how-to-stake-skl) - Guide to staking
 - [Pooled Security Model](/concepts/skale-network/pooled-security-model) - Network security model
 
