--- a/concepts/skale-network/skale-manager.mdx
+++ b/concepts/skale-network/skale-manager.mdx
@@ -97,7 +97,7 @@ SKALE Manager integrates with:
 ## Related Topics
 
 - [SKALE Network](/concepts/skale-network)
-- [Staking](/concepts/staking/overview)
-- [Governance](/concepts/governance/skale-dao)
+- [Staking SKL](/get-started/staking/staking-skl)
+- [Governance](/get-started/governance/skale-dao)
 - [Run a SKALE Chain](/developers/run-a-skale-chain/intro-to-schains)
 
