--- a/concepts/skale-network/skale-network-101.mdx
+++ b/concepts/skale-network/skale-network-101.mdx
@@ -50,5 +50,5 @@ For more information on SKALE Expand, see [SKALE on Base](/get-started/skale-on-
 ## Related Topics
 
 - [Consensus](/concepts/skale-chain/consensus)
-- [Staking](/concepts/staking/overview)
-- [Governance](/concepts/governance/skale-dao)
+- [Staking SKL](/get-started/staking/staking-skl)
+- [Governance](/get-started/governance/skale-dao)
