--- a/developers/native-features/using-filestorage.mdx
+++ b/developers/native-features/using-filestorage.mdx
@@ -160,4 +160,4 @@ The uploader address in the URLs MUST omit the 0x prefix AND be in lowercase.
 For example: 0x77333Da3492C4BBB9CCF3EA5BB63D6202F86CDA8 must be entered as 77333da3492c4BBB9ccf3Ea5bb63d6202f86cda8
 </Aside>
 
-Checkout [Filestorage.js SDK](/developers/sdks/filestorage-js) for a deeper dive into the available functions and API reference.
+Checkout [Filestorage.js SDK](/developers/sdks/filestorage-js) for a deeper dive into the available functions.
