--- a/get-started/skale.mdx
+++ b/get-started/skale.mdx
@@ -60,12 +60,12 @@ description: "The blockchain for billions of agents, with native privacy for age
     Build on SKALE chains deployed on Base Sepolia testnet.
   </Card>
 
-  <Card title="Explore Products" icon="cubes" href="/get-started/products">
+  <Card title="Pick a Chain" icon="cubes" href="/developers/pick-a-chain">
     Learn about Gas Chains, App Chains, and Credit Chains to find the right fit.
   </Card>
 </CardGroup>
 
-Explore [all use cases](/get-started/use-cases) and [developer guides](/developers/solidity-quickstart).
+Explore [developer guides](/developers/solidity-quickstart) and [use cases](/get-started/use-cases/agentic-commerce).
 
 ### **Get Funded**
 
@@ -74,7 +74,7 @@ Explore [all use cases](/get-started/use-cases) and [developer guides](/develope
     Apply for SKALE grants to accelerate your project development and innovation.
   </Card>
 
-  <Card title="Join the Community" icon="users" href="/get-started/community/official-links">
+  <Card title="Join the Community" icon="users" href="/get-started/resources/official-links">
     Connect with hundreds of builders, get support, and collaborate in the SKALE ecosystem.
   </Card>
 </CardGroup>
@@ -82,11 +82,11 @@ Explore [all use cases](/get-started/use-cases) and [developer guides](/develope
 ### **For Different Roles**
 
 <CardGroup cols={2}>
-  <Card title="For Validators" href="/validators/overview">
+  <Card title="For Validators" href="/validators/supernode-overview">
     Learn how to run a SKALE node and participate in network security with shared validator pools.
   </Card>
 
-  <Card title="For Delegators" href="/staking/overview">
+  <Card title="For Delegators" href="/get-started/staking/staking-skl">
     Stake SKL tokens and earn rewards by delegating to validators securing the network.
   </Card>
 </CardGroup>
