--- a/get-started/skl-token.mdx
+++ b/get-started/skl-token.mdx
@@ -31,10 +31,9 @@ When you vote on a proposal you use your SKL tokens to signal approval or opposi
 
 ## Learn More
 
-- [Tokenomics](/concepts/skl-token/tokenomics) - Detailed tokenomics information, distribution, and supply
-- [Supply UI](/concepts/skl-token/supply-ui) - Track SKL token supply and unlock schedule
+- [Tokenomics](/get-started/skl-token/tokenomics) - Detailed tokenomics information, distribution, and supply
 
 ## Related Topics
 
-- [Staking Overview](/concepts/staking/overview) - Learn about staking SKL tokens
-- [Governance](/concepts/governance/skale-dao) - Participate in SKALE DAO governance
+- [Staking SKL](/get-started/staking/staking-skl) - Learn about staking SKL tokens
+- [Governance](/get-started/governance/skale-dao) - Participate in SKALE DAO governance
