--- a/get-started/skl-token/tokenomics.mdx
+++ b/get-started/skl-token/tokenomics.mdx
@@ -49,7 +49,7 @@ All lock dates commence at Phase 2 Network Launch. Tokens awarded to SKALE suppo
 
 ## Token Unlock Schedule
 
-The token unlock schedule is dynamic and can be tracked through the [SKL Supply UI](/concepts/skl-token/supply-ui). The schedule ensures gradual token release to maintain network stability.
+The token unlock schedule is dynamic and can be tracked through the [SKL Supply UI](https://skl-supply-ui.pages.dev). The schedule ensures gradual token release to maintain network stability.
 
 ## Token Use Cases
 
@@ -85,13 +85,12 @@ Staking rewards can be calculated using the rewards calculator. Rewards are dist
 
 For detailed information on SKL token supply, distribution, and unlock schedule, see:
 
-- [SKL Supply UI](/concepts/skl-token/supply-ui) - Interactive supply tracking
+- [SKL Supply UI](https://skl-supply-ui.pages.dev) - Interactive supply tracking tool
 - [SKALE Tokenomics](https://skale.space/tokenomics) - Official tokenomics page
 
 ## Related Topics
 
-- [SKL Token Introduction](/concepts/skl-token) - Overview of the SKL token
-- [Supply UI](/concepts/skl-token/supply-ui) - Track token supply and distribution
-- [Staking Overview](/concepts/staking/overview) - Learn about staking SKL tokens
-- [Governance](/concepts/governance/skale-dao) - Participate in SKALE DAO governance
+- [SKL Token Introduction](/get-started/skl-token) - Overview of the SKL token
+- [Staking SKL](/get-started/staking/staking-skl) - Learn about staking SKL tokens
+- [Governance](/get-started/governance/skale-dao) - Participate in SKALE DAO governance
 
