--- a/get-started/staking/staking-skl.mdx
+++ b/get-started/staking/staking-skl.mdx
@@ -1,6 +1,6 @@
 ---
-title: "Overview"
-description: "Introduction to staking on SKALE"
+title: "Staking SKL"
+description: "Introduction to staking SKL tokens on SKALE Network"
 ---
 
 ## Overview
@@ -20,7 +20,4 @@ Staking is the process of locking SKL tokens to participate in securing the SKAL
 
 ## Getting Started
 
-- [How to Stake](/concepts/staking/getting-started) - Guide to staking and delegation
-- [Staking Lifecycle](/concepts/staking/staking-lifecycle) - Complete staking lifecycle
-- [Rewards Information](/concepts/staking/rewards) - Understanding staking rewards
-- [Validators](/concepts/staking/validators) - Validator information
+- [How to Stake SKL](/get-started/staking/how-to-stake-skl) - Step-by-step guide to staking SKL tokens on the SKALE Portal
