--- a/get-started/use-cases/government-blockchains.mdx
+++ b/get-started/use-cases/government-blockchains.mdx
@@ -43,7 +43,7 @@ SKALE's architecture enables:
 For more information on deploying enterprise solutions:
 
 - [Run a SKALE Chain](/developers/run-a-skale-chain/intro-to-schains)
-- [BITE Protocol](/concepts/bite-protocol)
+- [BITE Protocol](/concepts/bite-protocol/intro-bite-protocol)
 - [Access Control](/developers/run-a-skale-chain/access-control)
-- [SKALE Manager](/concepts/skale-manager)
+- [SKALE Manager](/concepts/skale-network/skale-manager)
 
