--- a/get-started/use-cases/private-payments.mdx
+++ b/get-started/use-cases/private-payments.mdx
@@ -33,7 +33,7 @@ SKALE Chains can process thousands of transactions per second, making them suita
 
 For more information on implementing payments on SKALE, see:
 
-- [Payments on SKALE](/developers/payments-on-skale)
+- [Build a DApp](/developers/build-a-dapp)
 - [Zero Gas Fees](/concepts/gas-fees/zero-gas-fees)
-- [Instant Finality](/concepts/instant-finality)
+- [Instant Finality](/concepts/skale-chain/instant-finality)
 
