Cleanup Pick a Chain

--- a/developers/gas-and-compute/appchain.mdx
+++ b/developers/gas-and-compute/appchain.mdx
@@ -22,5 +22,5 @@ Appchains operate with zero gas fees by default, similar to all SKALE Chains. Th
 
 - [Intro to SKALE Chains](/developers/run-a-skale-chain/intro-to-schains) - Learn more about running a SKALE Chain
 - [Pricing and Payments](/developers/run-a-skale-chain/pricing-and-payments) - Understanding appchain costs
-- [Pick a SKALE Chain](/developers/pick-a-chain) - Choosing between appchains and hub chains
+- [SKALE on Base](/get-started/quick-start/skale-on-base) - Get started with SKALE chains
 
