--- a/get-started/skale.mdx
+++ b/get-started/skale.mdx
@@ -1,41 +1,7 @@
 ---
 title: "SKALE"
-description: "The blockchain for billions of agents, with native privacy for agents and humans alike."
+description: "Purpose-built for the Internet of Agents"
 ---
-
-// TODO
-
-### **Why SKALE?**
-
-<AccordionGroup>
-  <Accordion title="Purpose Built for Agents">
-    SKALE is designed from the ground up to support billions of autonomous agents. With instant finality, zero gas fees, and siloed compute environments, agents can operate efficiently at scale without the constraints of traditional blockchain networks. Build the next generation of AI agents, trading bots, and autonomous systems.
-  </Accordion>
-
-  <Accordion title="Zero Gas Fees Forever">
-    SKALE offers zero gas fees for all transactions, making it economically viable for applications to perform millions of operations. This enables new use cases that were previously impossible due to gas cost constraints. Users never need to purchase or manage gas tokens.
-  </Accordion>
-
-  <Accordion title="Instant Finality">
-    Transactions on SKALE achieve instant finality in ~1 second, critical for agent operations, payments, and real-time applications that require immediate state confirmation. This enables real-time decision making and coordination between agents and users.
-  </Accordion>
-
-  <Accordion title="Infinite Scalability">
-    SKALE's network architecture allows you to add new chains to scale capacity infinitely. Each SKALE Chain operates as an independent Layer 1 blockchain, giving you dedicated resources when you need them while maintaining connection to the broader network.
-  </Accordion>
-
-  <Accordion title="Privacy & Confidential Computing">
-    SKALE provides enterprise-grade privacy through the BITE (Blockchain Interoperability and Trustless Execution) protocol and Trusted Execution Environments (TEEs). Process sensitive data confidentially, protect transaction details, and maintain regulatory compliance while leveraging blockchain benefits. Build privacy-preserving applications for finance, healthcare, supply chain, and enterprise that require data confidentiality and auditability.
-  </Accordion>
-
-  <Accordion title="Siloed Compute">
-    SKALE Chains provide isolated, private compute environments perfect for enterprise and government use cases requiring data sovereignty and regulatory compliance. Each chain operates independently with complete privacy while maintaining connection to the broader SKALE Network and public blockchains. Protect sensitive business data, patient records, and financial information in dedicated environments.
-  </Accordion>
-
-  <Accordion title="EVM Compatibility">
-    SKALE is fully EVM compatible. Developers can deploy contracts using the same tools and workflows they already know, including Foundry, Hardhat, and wallets like MetaMask. All major EVM infrastructure and libraries are supported out of the box.
-  </Accordion>
-</AccordionGroup>
 
 ### **Start Building**
 
@@ -48,7 +14,7 @@ description: "The blockchain for billions of agents, with native privacy for age
     Deploy your own private SKALE Chain with full customization, dedicated resources, and enterprise-grade privacy.
   </Card>
 
-  <Card title="Pick a Chain" icon="network-wired" href="/developers/pick-a-chain">
+  <Card title="Pick a Chain" icon="network-wired" href="/get-started/quick-start/skale-on-base">
     Choose from SKALE Hubs optimized for Gaming, DeFi, AI, and Consumer applications.
   </Card>
 
@@ -60,7 +26,7 @@ description: "The blockchain for billions of agents, with native privacy for age
     Build on SKALE chains deployed on Base Sepolia testnet.
   </Card>
 
-  <Card title="Pick a Chain" icon="cubes" href="/developers/pick-a-chain">
+  <Card title="Pick a Chain" icon="cubes" href="/get-started/quick-start/skale-on-base">
     Learn about Gas Chains, App Chains, and Credit Chains to find the right fit.
   </Card>
 </CardGroup>
@@ -92,4 +58,3 @@ Explore [developer guides](/developers/solidity-quickstart) and [use cases](/get
 </CardGroup>
 
 > Have questions? Join the SKALE team in [Discord](https://discord.gg/skale) to get started!
-
