Update Home Page

--- a/get-started/skale.mdx
+++ b/get-started/skale.mdx
@@ -6,55 +6,47 @@ description: "Purpose-built for the Internet of Agents"
 ### **Start Building**
 
 <CardGroup cols={2}>
-  <Card title="Build a DApp" icon="window" href="/developers/build-a-dapp">
-    Build and deploy your application in minutes on SKALE Hubs with zero gas fees.
+  <Card title="Apps" icon="window" href="/cookbook/agents/build-an-agent">
+    Build and deploy your application in minutes on SKALE
   </Card>
 
-  <Card title="Deploy Your Own Chain" icon="link" href="/developers/run-a-skale-chain/intro-to-schains">
+  <Card title="Chains" icon="link" href="/cookbook/x402/become-an-x402-seller">
     Deploy your own private SKALE Chain with full customization, dedicated resources, and enterprise-grade privacy.
   </Card>
-
-  <Card title="Pick a Chain" icon="network-wired" href="/get-started/quick-start/skale-on-base">
-    Choose from SKALE Hubs optimized for Gaming, DeFi, AI, and Consumer applications.
+  
+  <Card title="Agents" icon="window" href="/cookbook/agents/build-an-agent">
+    Build and deploy your agent in minutes on SKALE Hubs with zero gas fees.
   </Card>
 
-  <Card title="Go Live" icon="rocket" href="/get-started/go-live">
-    Deploy your application to SKALE mainnet and go live with your project.
-  </Card>
-
-  <Card title="SKALE on Base" icon="layer-group" href="/get-started/skale-on-base">
-    Build on SKALE chains deployed on Base Sepolia testnet.
-  </Card>
-
-  <Card title="Pick a Chain" icon="cubes" href="/get-started/quick-start/skale-on-base">
-    Learn about Gas Chains, App Chains, and Credit Chains to find the right fit.
+  <Card title="x402 Seller" icon="link" href="/cookbook/x402/become-an-x402-seller">
+    Accept x402 payments and sell your products and services on SKALE.
   </Card>
 </CardGroup>
 
-Explore [developer guides](/developers/solidity-quickstart) and [use cases](/get-started/use-cases/agentic-commerce).
+Explore [developer guides](/cookbook/agents/build-an-agent) and [use cases](/get-started/use-cases/agentic-commerce).
 
 ### **Get Funded**
 
 <CardGroup cols={2}>
-  <Card title="Grant Program" icon="hand-holding-dollar" href="https://discord.gg/skale">
+  <Card title="Grant Program" icon="hand-holding-dollar" href="">
     Apply for SKALE grants to accelerate your project development and innovation.
   </Card>
 
   <Card title="Join the Community" icon="users" href="/get-started/resources/official-links">
-    Connect with hundreds of builders, get support, and collaborate in the SKALE ecosystem.
+    Connect with ecosystem builders, receive techncial support, and collaborate with others in the SKALE Ecosystem.
   </Card>
 </CardGroup>
 
-### **For Different Roles**
+### **Stakers and Validators**
 
 <CardGroup cols={2}>
-  <Card title="For Validators" href="/validators/supernode-overview">
-    Learn how to run a SKALE node and participate in network security with shared validator pools.
+  <Card title="For Stakers" href="/get-started/staking/staking-skl">
+    Stake SKL tokens to secure the SKALE Network and recieve bounties for your economic collateral.
   </Card>
 
-  <Card title="For Delegators" href="/get-started/staking/staking-skl">
-    Stake SKL tokens and earn rewards by delegating to validators securing the network.
+  <Card title="For Validators" href="/validators/supernode-overview">
+    Learn how to run a SKALE node and become a SKALE Validator.
   </Card>
 </CardGroup>
 
-> Have questions? Join the SKALE team in [Discord](https://discord.gg/skale) to get started!
+> Have questions? Join the SKALE team in [Discord](https://discord.gg/skale) for support!
